# ClipboardManager

./: .gitignore  CMakeLists.txt  ClipboardManager.cpp  ClipboardManager.h  ClipboardManager.manifest  ClipboardManager.rc  README.md  TestApp.cpp  debug_test.bat
build-mingw/: build.bat
